make it cloudflare worker compatiable

--- a/package.json
+++ b/package.json
@@ -1,49 +1,24 @@
 {
-  "name": "@nitansde/mcp",
-  "version": "1.2.0",
-  "description": "Nitan MCP CLI server for uscardforum.com (modified Discourse MCP with Cloudflare bypass)",
-  "private": false,
+  "name": "nitan-mcp",
+  "version": "2.0.0",
+  "description": "Nitan MCP server for uscardforum.com deployed on Cloudflare Workers",
+  "private": true,
   "type": "module",
-  "bin": {
-    "nitan-mcp": "dist/index.js"
-  },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json && npm run copy:python",
-    "copy:python": "mkdir -p dist/http && cp src/http/cloudscraper_wrapper.py dist/http/ && cp src/http/curl_cffi_wrapper.py dist/http/ && cp requirements.txt dist/",
-    "postinstall": "node scripts/check-python-deps.mjs",
-    "prepublishOnly": "pnpm run build",
-    "dev": "node --enable-source-maps dist/index.js",
-    "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist",
-    "sync:fixtures": "node scripts/sync-fixtures.mjs",
-    "test": "node --test dist/test/**/*.js",
-    "release": "standard-version",
-    "release:dry": "standard-version --dry-run",
-    "release:alpha": "standard-version --prerelease alpha",
-    "release:beta": "standard-version --prerelease beta"
-  },
-  "files": [
-    "dist/**",
-    "scripts/check-python-deps.mjs",
-    "README.md",
-    "LICENSE"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "engines": {
-    "node": ">=18"
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "start": "wrangler dev",
+    "cf-typegen": "wrangler types",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "zod": "^3.23.8"
+    "@modelcontextprotocol/sdk": "^1.23.0",
+    "agents": "^0.3.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "standard-version": "^9.5.0",
-    "typescript": "^5.5.4"
-  },
-  "packageManager": "pnpm@10.14.0"
+    "@types/node": "^22.15.29",
+    "typescript": "5.9.3",
+    "wrangler": "^4.56.0"
+  }
 }
