--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
+    "build": "tsc",
     "cf-typegen": "wrangler types",
     "type-check": "tsc --noEmit"
   },
